# x-rust-freertos

./: .gitignore  01FreeRTOS task.c中包含的相关函数.md  02FreeRTOS list.c中主要的函数.md  03FreeRTOS queue.c中的主要函数.md  05双向链表的实现.md  06doubly-linked list based on raw pointers.md  Embedded_System.md  FreeRTOS_Source_Code.md  FreeRTOS_task相关.md  HYQ-README.md  README.md  Rust_调研报告_工业界.md  Timeline.md  git-指令及其使用.md  readme  rust up.md  前瞻性重要性分析-Rust.md  双向链表的实现.md  开题报告.md  相关工作（学术界）.md  项目背景.md
FinalSim/FreeRTOS-Sim/: FreeRTOS-Sim
Investigations/: Android+.md  Android.md  Discussion_with_TA.docx
Latex_1st_Report/: code.aux  code.out  code.tex  main.tex  structure.tex  开题报告.aux  开题报告.out  开题报告.tex  开题报告.toc
Rust_notes/: Rust Note ch5-8.md
Rustcode/task/: Cargo.toml
Rustcode/task/src/: base.rs  main.rs  task.rs  task_h.rs
STMsimReport/: ST_Freertos_Rust_Simulation.md
Win32-simulator-MSVC/: RTOSDemo.sln
Win32-simulator-MSVC/Debug/: Example001.ilk
Win32-simulator-MSVC/Examples/Example001/: main.c
Win32-simulator-MSVC/Examples/Example001/MSVC/: Example001.vcxproj
Win32-simulator-MSVC/Examples/Example002/: main.c
Win32-simulator-MSVC/Examples/Example002/MSVC/: Example002.vcxproj
Win32-simulator-MSVC/Examples/Example003/: main.c
Win32-simulator-MSVC/Examples/Example003/MSVC/: Example003.vcxproj
Win32-simulator-MSVC/Examples/Example004/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example004/MSVC/: Example004.vcxproj
Win32-simulator-MSVC/Examples/Example005/: main.c
Win32-simulator-MSVC/Examples/Example005/MSVC/: Example005.vcxproj
Win32-simulator-MSVC/Examples/Example006/: main.c
Win32-simulator-MSVC/Examples/Example007/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example008/: main.c
Win32-simulator-MSVC/Examples/Example009/: main.c
Win32-simulator-MSVC/Examples/Example010/: main.c
Win32-simulator-MSVC/Examples/Example011/: main.c
Win32-simulator-MSVC/Examples/Example012/: main.c
Win32-simulator-MSVC/Examples/Example013/: main.c
Win32-simulator-MSVC/Examples/Example014/: main.c
Win32-simulator-MSVC/Examples/Example015/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example016/: main.c
Win32-simulator-MSVC/Examples/Example017/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example018/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example019/: main.c
Win32-simulator-MSVC/Examples/Example020/: main.c
Win32-simulator-MSVC/Examples/Example021/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example022/: main.c
Win32-simulator-MSVC/Examples/Example023/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/Examples/Example024/: main.c
Win32-simulator-MSVC/Examples/Example025/: FreeRTOSConfig.h  main.c
Win32-simulator-MSVC/FreeRTOS_Source/include/: list.h
Win32-simulator-MSVC/Supporting_Functions/: supporting_functions.c  supporting_functions.h
c2rust/freeRTOS_list/: Cargo.toml
c2rust/freeRTOS_list/src/: lib.rs  list.rs  list_beta.rs  zslist.rs  zslist_go.rs
cfg/: Cargo.toml  README.md
cfg/src/: main.rs
docs/: concluding.md  feasibility.md  list文档报告.md
freeRTOS_API/: Cargo.toml
freeRTOS_API/src/: main.rs
freeRTOS_list/: .project
freeRTOS_list/src/: lib.rs  list_4th.rs  list_5th.rs  list_6th.rs  list_7th.rs  list_8th_arc_rwlock.rs  mylist.rs  zslist.rs  zslist_go.rs
freesim/: freesim.ioc
get/: Cargo.toml
get/src/: main.rs
hyq_rust_freertos/: build.rs
hyq_rust_freertos/hyq_rust_freertos/: Cargo.toml
hyq_rust_freertos/hyq_rust_freertos/portable/: FreeRTOSConfig.h
hyq_rust_freertos/hyq_rust_freertos/src/: ffi.rs  list.rs  port.rs  task_hyq.rs
hyq_rust_freertos/portable/: portable.h
hyq_rust_freertos/src/: bindings.rs  lib.rs  shim.rs  task_hyq.rs
rust_freertos/: .gitignore  Cargo.toml  build.rs  port_README.md
rust_freertos/Source/: FreeRTOSConfig.h  compile_flags.txt  port_ffi.h  portable.h  portmacro.h
rust_freertos/examples/: test_counting_semaphore.rs  test_mutex.rs  test_queue.rs  test_recursive_mutex.rs  test_task_scheduler.rs
rust_freertos/portable/: heap_3.c  port.c  port_defs.h  portmacro.h
rust_freertos/src/: bindgen.rs  bindings.rs  config.rs  ffi.rs  kernel.rs  lib.rs  list.rs  mutex.rs  port.rs  projdefs.rs  queue.rs  queue_api.rs  queue_h.rs  rust_alloc.rs  semaphore.rs  task.rs  task_api.rs  task_control.rs  task_global.rs  task_queue.rs  task_timemanager.rs  trace.rs
vim-rust-settings/: .README.md.swp  .vimrc  README.md
weeks/: week7.md
(+32 files in other folders)
